@@ -1,0 +1,9 @@
+<?xml version="1.0"?>
+<object name="portal_controlpanel" meta_type="Plone Control Panel Tool">
+ <configlet title="subscribers overview" action_id="Subscribers"
+    appId="SubscribersID" category="Products" condition_expr="python:True"
+    url_expr="string:${portal_url}/subscribers_config.html" visible="True"
+    icon_expr="string:site_icon.png" remove="True">
+  <permission>Manage Portal</permission>
+ </configlet>
+</object>
